# forge-conductor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT-BACKEND.md  ARCHITECTURE.md  DASHBOARD.md  DESIGN.md  PACKAGING.md  RAMDISK.md  ROADMAP.md
home-template/: README.md  agent_backend.json  ramdisk-config.json
home-template/scripts/: ensure-lmstudio-forge.ps1  forge-mcp-keeper.py  forge-ramdisk-elevated-ops.ps1  forge-ramdisk.ps1  forge-stack.ps1  grok-build-agent-ctl.py  install-forge-ramdisk-elevated-task.ps1  load-qwen-longctx.ps1  notify-lmstudio-agent-backend.ps1  open-forge-dashboard.ps1  probe-mcp.ps1
home-template/scripts/assets/: forge-system-prompt.grok.txt  forge-system-prompt.host.txt  forge-system-prompt.txt  qwen-chat-template-mcp-safe.jinja
home-template/telemetry/: README.md  install-task.ps1  package.json  run.ps1  server.js  supervise.ps1
home-template/telemetry/lib/: forge.js  system.js  tools-catalog.js
home-template/telemetry/static/: app.js  index.html  (+1 more)
tests/: conftest.py  test_agent_backend.py  test_agent_playbooks.py  test_agents.py  test_audit.py  test_browser.py  test_cli_smoke.py  test_config.py  test_continuity_auto.py  test_coordinator.py  test_doctor.py  test_error_shapes.py  test_fail_forward.py  test_filesystem.py  test_git.py  test_memory_ram.py  test_memory_tools.py  test_onboarding.py  test_ram_orchestration.py  test_research.py  test_search.py  test_search_mcp_stdio.py  test_server_tools_list.py  test_shell.py  test_store.py  test_supervisor_failover.py  test_tool_resilience.py
